@@ -121,6 +121,13 @@ const ts::Enumeration ts::DektecDVBTProperty({
 #endif
 });
 
+const ts::Enumeration ts::DektecPowerMode({
+#if !defined(TS_NO_DTAPI)
+    {u"high-quality", DTAPI_IOCONFIG_MODHQ},
+    {u"low-power", DTAPI_IOCONFIG_LOWPWR},
+#endif
+});
+
 
 //-----------------------------------------------------------------------------
 // Check if this version of TSDuck was build with Dektec support.
